Rearranged the directories so the Jekyll site can run as a GitHub project site.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
+# Jekyll and Ruby specific.
+.sass-cache
+_site/*
+Gemfile.lock
+
+# Bundler related.
+.bundle
+vendor/bundle/
+
+# Github related.
+CNAME
+
+# Other.
+*.orig
+*.core
+*.rej
+*~
+*.swp
+*.log
+*.tmp
+*.bak
+.*\#.*\#$
+
+# OS garbage.
+Thumbs.db
 .DS_Store
