--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 # Site settings
+host: 127.0.0.1
 title: "Hofstra Digital Research Center: Mapping the Plague"
 email: drc@hofstra.edu
 description: ""
